
cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(cmake_and_cuda LANGUAGES CXX CUDA)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Build/CMake")

set(DEFAULT_CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

cmake_policy(SET CMP0074 NEW)

#include(${CMAKE_CURRENT_SOURCE_DIR}/Build/CMAKE/FindTBB.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/Build/CMAKE/CompileOptions.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/Build/CMAKE/TaskingSystemOptions.cmake)

include(CTest)

find_package(CUDA)

if(CUDA_FOUND)
	message(STATUS "CUDA FOUND AT: " ${CUDA_INCLUDE_DIRS})
	message(STATUS "CUDA_LIB_DIR: " "${CUDA_INCLUDE_DIRS}/../lib/x64")
	include_directories(${CUDA_INCLUDE_DIRS})
	link_libraries(CUDA)
endif(CUDA_FOUND)

add_subdirectory("src")



