# CMakeList.txt : CMake project for tensor_test_implementation, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (tensor_test_implementation "tensor_test_implementation.cpp" "tensor_test_implementation.h")

# TODO: Add tests and install targets if needed.
